<resources>
    <string name="app_name">College Near Me</string>
    <string name="app_tag">Highlighting Nearby Colleges</string>
    <string name="powered_by_tag">Powered by College Scorecard Data</string>

    <string name="firebase_url">https://collegenearme.firebaseio.com</string>

    <string name="shared_preferences_file">com.epicodus.ccnearme.PREFERENCE_FILE_KEY</string>
    <string name="google_maps_key">AIzaSyAx9aD6olsb1aJVUxPiiWey6NfIE4Sza38</string>

    <!--College Detail Formatting-->

    <string name="details">Details</string>

    <string name="carnegie_description_1">%s is a very small school. It awards associate\'s degrees, and has an enrollment of less than 500 students.</string>
    <string name="carnegie_description_2">%s is a small school. It awards associate\'s degrees, and has an enrollment of less than 2,000 students.</string>
    <string name="carnegie_description_3">%s is a medium-sized school. It awards associate\'s degrees, and has an enrollment of between 2,000 and 5,000 students.</string>
    <string name="carnegie_description_4">%s is a large school. It awards associate\'s degrees, and has an enrollment of between 5,000 and 10,000 students.</string>
    <string name="carnegie_description_5">%s is a very large school. It awards associate\'s degrees, and has an enrollment of more than 10,000 students.</string>
    <string name="carnegie_description_6">%s is a very small school. It awards bachelor\'s degrees and has an enrollment of less than 1,000 students. Many students do not live on campus. Many students attend part-time.</string>
    <string name="carnegie_description_7">%s is a very small school. It awards bachelor\'s degrees and has an enrollment of less than 1,000 students. Many students do not live on campus, but most attend full-time.</string>
    <string name="carnegie_description_8">%s is a very small school. It awards bachelor\'s degrees and has an enrollment of less than 1,000 students. Most students live on campus and attend full-time.</string>
    <string name="carnegie_description_9">%s is a small school. It awards bachelor\'s degrees and has an enrollment of less than 3,000 students. Many students do not live on campus. Many students attend part-time.</string>
    <string name="carnegie_description_10">%s is a small school. It awards bachelor\'s degrees and has an enrollment of less than 3,000 students. Many students do not live on campus, but most attend full-time.</string>
    <string name="carnegie_description_11">%s is a small school. It awards bachelor\'s degrees and has an enrollment of less than 3,000 students. Most students live on campus and attend full-time.</string>
    <string name="carnegie_description_12">%s is a medium-sized school. It awards bachelor\'s degrees and has an enrollment of between 3,000 and 10,000 students. Many students do not live on campus. Many students attend part-time.</string>
    <string name="carnegie_description_13">%s is a medium-sized school. It awards bachelor\'s degrees and has an enrollment of between 3,000 and 10,000 students. Many students do not live on campus, but most attend full-time.</string>
    <string name="carnegie_description_14">%s is a medium-sized school. It awards bachelor\'s degrees and has an enrollment of between 3,000 and 10,000 students. Most students live on campus and attend full-time.</string>
    <string name="carnegie_description_15">%s is a large school. It awards bachelor\'s degrees and has an enrollment of more than 10,000 students. Many students do not live on campus. Many students attend part-time.</string>
    <string name="carnegie_description_16">%s is a large school. It awards bachelor\'s degrees and has an enrollment of more than 10,000 students. Many students do not live on campus, but most attend full-time.</string>
    <string name="carnegie_description_17">%s is a large school. It awards bachelor\'s degrees and has an enrollment of more than 10,000 students. Most students live on campus and attend full-time.</string>
    <string name="carnegie_description_18">%s is a special-focus institution.</string>

    <string name="bachelorsDegreesAwardedText">Awards bachelor\'s degrees</string>
    <string name="associatesDegreesAwardedText">Awards associate\'s degrees</string>

    <string name="bachelorsDegreesAwardedIcon">&#xf19d;</string>

    <string name="verySmallEnrollment">Less than 1,000 students</string>
    <string name="smallEnrollmentCC">Less than 2,000 students</string>
    <string name="smallEnrollment">Less than 3,000 students</string>
    <string name="mediumEnrollmentCC">Less than 5,000 students</string>
    <string name="mediumEnrollment">3,000 to 10,000 students</string>
    <string name="largeEnrolment">More than 10,000 students</string>
    <string name="noEnrollmentData">No enrollment data available</string>

    <string name="residentialIcon">&#xf236;</string>
    <string name="residentialLabel">Most students live on-campus</string>
    <string name="partTimeLabel">Many students attend part-time</string>

    <string name="admission_percent">%s overall admission rate</string>

    <!--User Interface-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>

    <string name="background_image_description">Student Walking</string>
    <string name="main_activity_near_you">%d colleges are nearby.</string>
    <string name="main_activity_button_text">Explore</string>

    <string name="title_activity_results">Nearby Colleges</string>
    <string name="title_activity_about">About College Near Me</string>
    <string name="title_activity_saved">My Saved Colleges</string>

    <string name="zip_code_search_hint">Or search by zip code…</string>
    <string name="searching_nearby">Updating list of nearby colleges…</string>
    <string name="searching">Searching</string>
    <string name="feedback">Feedback about College Near Me app</string>
    <string name="app_email_address">collegenearmeapp@gmail.com</string>
    <string name="college_scorecard_data_url">https://collegescorecard.ed.gov/data/</string>
    <string name="my_college_list">My College List</string>
    <string name="how_to_share">How do you want to share?</string>

    <string name="main_activity_none_nearby">There are no nearby colleges.</string>
    <string name="location_last_checked">"Location last checked at %s"</string>

    <string name="city_state" formatted="false">%s, %s</string>
    <string name="city_state_zip" formatted="false">%s, %s %d</string>

    <string name="card_placeholder_college_name">College Name</string>
    <string name="card_placeholder_college_city">Plano, TX</string>
    <string name="reorder_icon">Reorder Icon</string>

    <!--Copy-->

    <string name="about_us_main">College Near Me provides students and their families
        information about nearby colleges.\n\nCollege Near Me uses existing Department of
        Education data and adds the features of Android devices, like maps and sharing options.</string>
    <string name="search_settings">Search Settings</string>
    <string name="include_private_colleges">Include Private Colleges</string>
    <string name="include_for_profit_colleges">Include For-Profit Colleges</string>

</resources>
