<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/title_activity_about" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/title_activity_saved" />

    </group>

    <item android:title="@string/search_settings" >
        <menu android:checkableBehavior="all">
            <item
                android:id="@+id/nav_private"
                android:icon="@drawable/ic_thumb_down_black_24dp"
                android:title="@string/include_private_colleges" />
            <item
                android:id="@+id/nav_for_profit"
                android:icon="@drawable/ic_thumb_down_black_24dp"
                android:title="@string/include_for_profit_colleges" />
        </menu>
    </item>

</menu>
