<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/background_image"
            android:alpha="0.5"
            android:contentDescription="@string/background_image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/collegesNearYouNumberTextView"
            android:layout_marginTop="130dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/collegesNearYouNumberTextView"
            android:id="@+id/lastUpdateTextView"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/beginButton"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastUpdateTextView"
            android:text="@string/main_activity_button_text"
            android:backgroundTint="@color/colorAccent"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/beginButton"
            android:hint="@string/zip_code_search_hint"
            android:layout_centerHorizontal="true"
            android:inputType="number"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/zipInput"/>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/zipSearchButton"
            android:layout_height="wrap_content"
            android:text="Search"
            android:layout_below="@id/zipInput"
            android:backgroundTint="@color/colorAccent"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
